# amsal

./: Cargo.toml  README.md  ci.sh
.github/workflows/: ci.yml
crates/amsal-cli/: Cargo.toml
crates/amsal-cli/src/: main.rs
crates/amsal-core/: Cargo.toml
crates/amsal-core/src/: engine.rs  lib.rs  paths.rs
crates/amsal-core/src/effects/: audio.rs  dsp.rs  http.rs  import.rs  mod.rs
crates/amsal-core/src/models/: media.rs  mod.rs  playback.rs  scroll_ext.rs
crates/amsal-ffi/: Cargo.toml
crates/amsal-ffi/src/: lib.rs
docs/: schema.md
scripts/: build-ffi.sh
