[package]
name = "amsal-core"
description = "Media OS kernel — all-media engine over 9S scrolls"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
nine-s-core = { workspace = true }
nine-s-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
symphonia = { workspace = true }
cpal = { workspace = true }
lofty = { workspace = true }
parking_lot = { workspace = true }
beeclock-core = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
nine-s-store = { workspace = true }
nine-s-kernel = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.20"
